@@ -467,7 +467,8 @@ $lang["Home partition"]="Home partition";
 $lang["Drag and drop to move images/albums"]="Drag and drop to move images/albums";
 $lang["Excluded folders"]="Excluded folders";
 $lang["to install squeezecenter"]="to install squeezecenter";
-$lang["Step 1/3: Date and time"]="Step 1/3: Date and time";
+$lang["Step 1/3: Regional settings"]="Step 1/3: Regional settings";
+$lang["system_language"]="Language";
 $lang["HHmm"]="HHmm";
 $lang["Add viewer"]="Add viewer";
 $lang["Show logs"]="Show logs";
